--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Gllacy</title>
   <meta name="keywords" content="ice-cream glaccy shop buy">
   <meta name="description" content="shop of ice-cream">
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 
@@ -44,11 +44,11 @@
             <span>Вход</span>
             <div class="login-entrance clearfix">
               <form action="/echo" method="post">
-                <label>
-                  <input type="email" placeholder="Электронная почта" required>
+                <input type="email" name="email" required>
+                <label for="" placeholder="Электронная почта">
                 </label>
-                <label>
-                  <input type="password" name="password" placeholder="Пароль" required>
+                <input type="password" name="password" required>
+                <label for="" placeholder="Пароль">
                 </label>
                 <br>
                 <input type="submit" value="Войти" class="btn btn-red">
@@ -59,11 +59,12 @@
           </div>
           <div class="search">
             <a href="#">Поиск</a>
-            <form class="click-search" action="/echo" method="post">
-              <label>
-                <input type="search" name="search" placeholder="Что ищем?">
-              </label>
-            </form>
+            <div class="click-search">
+              <form action="/echo" method="post">
+                <input type="search" name="search" id="search">
+                <label for="search" placeholder="Что ищем?"></label>
+              </form>
+            </div>
           </div>
           <div class="contacts">
             C 10 до 20, ежедневно
@@ -78,7 +79,7 @@
           <div class="promo-slider">
             <div class="slider">
               <div class="slide" id="slide1">
-                <div class="slide-title">Крембрюле и пломбир с малиновым джемом</div>
+                <div class="slide-title">Крем-брюле и пломбир &nbsp;с малиновым джемом</div>
                 <a href="#" class="btn btn-red btn-slide">Давайте оба!</a>
               </div>
               <div class="slide" id="slide2">
@@ -153,7 +154,7 @@
         </section>
         <section class="advantages clearfix">
           <h1 class="advantages-title"> Магазин Глейси - это онлайн и оффлайн магазин по продаже мороженного собственного производства на развес</h1>
-          <ul class="clearfix">
+          <ul class="list clearfix">
             <li class="own-icecream">Все наше мороженное изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий</li>
             <li class="farm">Закупка ингридиента производиться только у проверенных фермерских хозяйств и компаний, с которыми нас связывают долговременное сотрудничество </li>
             <li class="ecologically">Для приготовления мороженого используется настоящие сливки и молоко высочайшего качества. Все дополнительные ингридиенты добавки произведены из натурального экологически чистого сырья.</li>
@@ -170,14 +171,16 @@
             <div class="subscription clearfix">
               <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)</p>
               <form action="/echo" method="post">
-                <input type="email" placeholder="Электронная почта" required>
-                <input type="submit" class="btn btn-red btn-subscription">
+                <input type="email" name="email" required>
+                <label for="" placeholder="Электронная почта"></label>
+                <input type="submit" value="Отправить" class="btn btn-red btn-subscription">
               </form>
             </div>
           </div>
         </div>
       </div>
       <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123604!2d30.320894615584464!3d59.93879686904855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1455995813422" width="1200" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
         <div class="feedback">
           Адрес нашего офиса и
           <br>офлайн магазина:
@@ -214,18 +217,31 @@
   <div class="feedback-form clearfix">
     <form action="/echo" method="post">
       <legend>Мы обязательно вам ответим!</legend>
-      <input type="text" required>
+      <input type="text" name="text" required>
       <label for="" placeholder="Как вас зовут?"></label>
       <br>
-      <input type="email" required>
+      <input type="email" name="email" required>
       <label for="" placeholder="Ваша почта для ответа?"> </label>
       <br>
       <textarea rows="" cols="" id="feedback-textarea" required></textarea>
       <label for="feedback-textarea" placeholder="Напишите что-нибудь..."></label>
       <input type="submit" class="btn btn-red" value="Отправить">
+      <input type="submit" class="close" value="">
     </form>
   </div>
-  <script src="js/script.js"></script>
+  <script>
+    var link = document.querySelector(".feedback .btn")
+    var popup = document.querySelector(".feedback-form")
+    link.addEventListener("click", function (event) {
+      event.preventDefault();
+      popup.classList.add("feedback-form-show");
+    });
+    var close = document.querySelector(".feedback-form .close")
+    close.addEventListener("click", function (event) {
+      event.preventDefault();
+      popup.classList.remove("feedback-form-show");
+    });
+  </script>
 </body>
 
 </html>
